<resources>
    <string name="app_name">HemodialysisProject</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="ceshi">简介：维纳斯的空间啊看见的你家啊啊回到武汉的卡巴侃大山阿克顿哈桑基督教啊打算卡卡你说的
    按思考的你家啊三年级的你卡机思念的加拉斯金卡和三等奖哈师大卡死接待卡斯</string>

    <string name="doctor">
         副主任医师，贵州省中医医院血液透析室主任，2001年毕业于贵阳中医学院中西医结合专业，2001年8月至今一直在贵州省中医医院肾病内科及血液透析室从事临床、教学及科研工作，曾于2004年在广东省中医院肾内科进修学习，2008年在卫生部中日友好医院肾内科及血透室进修学习，师从全国著名肾脏病专家谌贻璞教授，2015年在北京煤炭总医院进修学习，擅长运用中西医结合治疗各种急慢性肾脏疾病，对尿毒症患者血管通路的建立和维护有丰富经验，对中西医结合治疗提高尿毒症患者的生活质量和延长患者的生存时限有一定研究。现任中华中医药学会肾病分会委员，贵州省中西医结合血液净化学分会副主任委员，贵州省医学会血液净化学分会第一届委员会委员，贵州省中西医结合学会第一届肾病专业委员会委员，贵州省第一批名老中医学术经验继承人，发表并参与发表论文十篇，先后参与厅局级及省级科研课题11项，主持院级课题1项。
    </string>

    <!--我的个人信息-->
    <string name="header_pic">头像</string>
    <string name="my_location">我的地址</string>
    <string name="gender">性别</string>
    <string name="not_fill">未填写</string>
    <string name="cell_phone">手机号</string>
    <string name="user_name">用户名</string>
    <string name="real_name">真实姓名</string>
    <string name="user_password">修改密码</string>
    <string name="id_number">身份证号码</string>
    <string name="diagnosis_Number">诊断号</string>
    <string name="birthday">出生日期</string>
    <string name="user_email">邮箱</string>

    <!-- 修改个人信息-->
    <string name="change_user_name">修改用户名！</string>
    <string name="change_real_name">修改姓名！</string>
    <string name="change_cell_phone">修改手机号码！</string>
    <string name="change_my_location">修改地址！</string>
    <string name="change_id_number">修改身份证号码！</string>
    <string name="change_password">修改密码！</string>
    <string name="change_user_gender">修改性别！</string>
    <string name="change_birthday">修改生日日期!</string>
    <string name="change_user_email">修改邮箱!</string>

    <!-- 个人排班信息 -->
    <string name="patient_name">患者 ：</string>
    <string name="specific_dialysis_time">具体透析时间 ：</string>
    <string name="doctor_name">医生 ：</string>
    <string name="location">地点 ：</string>
    <string name="machine_number">血透机编号 ：</string>
    <string name="dialysis_scheme">透析方案 ：</string>
    <string name="tip1">提示：当前是您的个人周期排班信息！</string>
    <string name="tip2">提示：以下是您已经预约过的医生！点击进入即可预约排班!</string>

    <string name="save_to_phone">保存图片</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>

    <!-- orderButton -->
    <string name="order">预约</string>
    <string name="already_order">已预约</string>

    <!-- dialog -->
    <string name="confirm">确认</string>
    <string name="appointment_true">预约成功</string>
    <string name="appointment_false">预约成功</string>

    <string name="hospital_intro">我可怕可怕达拉斯啦啊代码卡梅速度慢阿拉曼德拉爱死曼德拉斯克搭理我了那里等你那算了的难受到了那里
    阿里斯曼德拉玛莎拉蒂姆阿萨姆的拉玛莎拉蒂马里卡梅斯达克玛莎拉面对率为窘境冬季as领导们拉萨曼德拉斯曼德鲁克忙完了吗来的阿穆隆,大蒜的
    杜威和低i啊开始大肆电脑课集散地就都忘记阿里斯打进了撒到了三季度旺季大，杜威i还uk活动哈桑的奥斯卡。</string>
</resources>
