<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray5"
    android:orientation="vertical">


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="160px"
            android:background="@drawable/option_item_secector"
            android:gravity="center_vertical"
            android:paddingRight="6px">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6px"
                android:layout_marginLeft="30px"
                android:layout_weight="1"
                android:text="@string/header_pic"
                android:textColor="@color/black0"
                android:textSize="15sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivHeader"
                android:layout_width="130px"
                android:layout_height="130px"
                android:layout_marginLeft="30px"
                android:layout_marginRight="30px"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar"
                app:civ_border_color="#00BFFF"
                app:civ_border_width="2dp" />
        </com.zhy.autolayout.AutoLinearLayout>

        <View
            style="@style/Line"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px" />

        <com.liangjing.library.OptionItemView
            android:id="@+id/userName"
            style="@style/OptionItem"
            android:background="@drawable/option_item_secector"
            app:left_text="@string/user_name"
            app:left_text_color="@color/black0"
            app:left_text_margin_left="30px"
            app:left_text_size="16sp"
            app:right_text="@string/not_fill"
            app:right_text_color="@color/gray2"
            app:right_text_margin_right="40px"
            app:right_text_size="14sp" />

        <View
            style="@style/Line"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px" />

        <com.liangjing.library.OptionItemView
            android:id="@+id/realName"
            style="@style/OptionItem"
            android:background="@drawable/option_item_secector"
            app:left_text="@string/real_name"
            app:left_text_color="@color/black0"
            app:left_text_margin_left="30px"
            app:left_text_size="16sp"
            app:right_text="@string/not_fill"
            app:right_text_color="@color/gray2"
            app:right_text_margin_right="40px"
            app:right_text_size="14sp" />

        <View
            style="@style/Line"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px" />

        <com.liangjing.library.OptionItemView
            android:id="@+id/userGender"
            style="@style/OptionItem"
            android:background="@drawable/option_item_secector"
            app:left_text="@string/gender"
            app:left_text_color="@color/black0"
            app:left_text_margin_left="30px"
            app:left_text_size="16sp"
            app:right_text="@string/not_fill"
            app:right_text_color="@color/gray2"
            app:right_text_margin_right="40px"
            app:right_text_size="14sp" />
    </com.zhy.autolayout.AutoLinearLayout>


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:orientation="vertical">

        <com.liangjing.library.OptionItemView
            android:id="@+id/myLocation"
            style="@style/OptionItem"
            android:background="@drawable/option_item_secector"
            app:left_text="@string/my_location"
            app:left_text_color="@color/black0"
            app:left_text_margin_left="30px"
            app:left_text_size="16sp"
            app:right_text="@string/not_fill"
            app:right_text_color="@color/gray2"
            app:right_text_margin_right="40px"
            app:right_text_size="14sp" />

        <View
            style="@style/Line"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px" />

        <com.liangjing.library.OptionItemView
            android:id="@+id/cellPhone"
            style="@style/OptionItem"
            android:background="@drawable/option_item_secector"
            app:left_text="@string/cell_phone"
            app:left_text_color="@color/black0"
            app:left_text_margin_left="30px"
            app:left_text_size="16sp"
            app:right_text="@string/not_fill"
            app:right_text_color="@color/gray2"
            app:right_text_margin_right="40px"
            app:right_text_size="14sp" />

        <View
            style="@style/Line"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px" />

        <com.liangjing.library.OptionItemView
            android:id="@+id/diagnosisNumber"
            style="@style/OptionItem"
            android:background="@drawable/option_item_secector"
            app:left_text="@string/diagnosis_Number"
            app:left_text_color="@color/black0"
            app:left_text_margin_left="30px"
            app:left_text_size="16sp" />

        <View
            style="@style/Line"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px" />

        <com.liangjing.library.OptionItemView
            android:id="@+id/birthday"
            style="@style/OptionItem"
            android:background="@drawable/option_item_secector"
            app:left_text="@string/birthday"
            app:left_text_color="@color/black0"
            app:left_text_margin_left="30px"
            app:left_text_size="16sp"
            app:right_text="@string/not_fill"
            app:right_text_color="@color/gray2"
            app:right_text_margin_right="40px"
            app:right_text_size="14sp" />

        <View
            style="@style/Line"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px" />

        <com.liangjing.library.OptionItemView
            android:id="@+id/idNumber"
            style="@style/OptionItem"
            android:background="@drawable/option_item_secector"
            app:left_text="@string/id_number"
            app:left_text_color="@color/black0"
            app:left_text_margin_left="30px"
            app:left_text_size="16sp"
            app:right_text="@string/not_fill"
            app:right_text_color="@color/gray2"
            app:right_text_margin_right="40px"
            app:right_text_size="14sp" />

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>