<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical"
    app:cardBackgroundColor="#CAE1FF"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_name"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/patientName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30px"
                tools:text="晚点"/>
        </com.zhy.autolayout.AutoLinearLayout>

        <View
            style="@style/Line"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_name"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/doctorName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30px"
                tools:text="维杜卡"/>
        </com.zhy.autolayout.AutoLinearLayout>

        <View
            style="@style/Line"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/dialysisLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30px"
                tools:text="广东省"/>
        </com.zhy.autolayout.AutoLinearLayout>

        <View
            style="@style/Line"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialysis_scheme"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/dialysisScheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30px"
                tools:text="HD"/>
        </com.zhy.autolayout.AutoLinearLayout>

        <View
            style="@style/Line"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_number"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/machineNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30px"
                tools:text="55"/>
        </com.zhy.autolayout.AutoLinearLayout>


        <View
            style="@style/Line"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specific_dialysis_time"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/dialysisDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30px"
                tools:text="2022年11月1日至11月7日"/>
        </com.zhy.autolayout.AutoLinearLayout>



    </com.zhy.autolayout.AutoLinearLayout>


</android.support.v7.widget.CardView>